--- a/subpage-layout.css
+++ b/subpage-layout.css
@@ -189,20 +189,21 @@ p:empty {
     visibility: hidden;
 }
 #search-form form input.search {
-    background-color: #4CC0B0;
+    background-color: #ffbd00;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
     border: 1px solid #fff;
     color: #000000;
+    font-weight: 600;
     height: 46px;
     vertical-align: top;
     margin-left: -3px;
     cursor: pointer;
     font-size: 1rem;
     font-weight: 100;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 12px 24px;
+    text-transform: capitalize;
 }
 #search-form form input.search:focus {
     box-sizing: border-box; 
