--- a/subpage-layout.css
+++ b/subpage-layout.css
@@ -1,4 +1,7 @@
+/* Icons */
 @import url(“https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css”);
+
+/* Foundational Styles */
 body {
     color: #404040;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -43,9 +46,13 @@ p:empty {
     margin: 0;
     padding: 0;
 }
+
+/* Opening summary for KB articles */
 #doc-summary {
     font-size: 1.5rem;
 }
+
+/* Top-most navigation */
 #top-links-int,
 #top-links {
     color: #404040;
@@ -101,6 +108,8 @@ p:empty {
     flex-shrink: 0;
     background-color: #ffd14c;
 }
+
+/* Logo and search box */
 #logo-search {
     background-color: transparent;
     box-sizing: inherit;
@@ -217,6 +226,8 @@ p:empty {
     display: none;
     visibility: hidden;
 }
+
+/* Page body below the top nav, logo, search */
 #maincontent {
     max-width: 1240px !important;
     margin-left: auto;
@@ -230,8 +241,11 @@ p:empty {
     padding: 0;
 }
 #maincontent div.custom h2 {
+    /* Hide headings from all users because they don't make sense in our usage.
+       Doesn't impact article body. */
     display: none;
 }
+/* #cat-list is the homepage boxes with primary and secondary links */
 #maincontent #custom4 #cat-list {
     margin: 0;
     padding: 0;
@@ -246,6 +260,7 @@ p:empty {
     line-height: inherit;
 }
 #maincontent #custom4 #cat-list h2 p.kb-common-chevron {
+    /* Nix chevrons because we don't want people collapsing our widgets */
     display: none;
     visibility: hidden;
     padding: inherit;
@@ -270,10 +285,12 @@ p:empty {
     text-decoration: underline;
 }
 #maincontent #custom4 ul > li > ul > li > ul {
+    /* Hide sub-categories that don't fit the homepage format */
     display: none;
     visibility: hidden;
 }
 #maincontent #custom4 > ul#cat-list {
+    /* Make the cards card correctly (layout */
     display: flex;
     flex-wrap: wrap;
     list-style-type: none;
@@ -281,6 +298,7 @@ p:empty {
     margin: 0;
 }
 #maincontent #custom4 ul#cat-list > li {
+    /* Make the cards 3-across in-general */
     flex: 0 0 calc(33% - 24px);
     border: 1px solid #000;
     box-sizing: border-box;
@@ -308,11 +326,15 @@ p:empty {
     display: inline;
 }
 #maincontent #custom4 > ul > li > ul > li::after {
+    /* Turning a list into links, we need a comma between links */
     content: ", ";
 }
 #maincontent #custom4 > ul > li > ul > li:last-child::after {
+    /* but last links don't need a comma after... */
     content: "";
 }
+
+/* Footer section of each page */
 footer {
     width: 100%;
     background-color: #e9eaea;
@@ -334,11 +356,15 @@ footer #copyright {
 footer #copyright .brand {
     font-size: 1rem;
 }
+
+/* Smaller width media for the widget tree */
 @media screen and (max-width: 880px) {
     #maincontent #custom4 ul.tree > li {
         flex: 0 0 calc(50% - 24px);
     }
 }
+
+/* There is a strange form at the top of tables which we haven't yet needed. Hide it */
 #topic-desc-doc > form > fieldset > legend,
 #doc-summary {
     display: none;
@@ -357,6 +383,8 @@ footer #copyright .brand {
 #topic-desc-doc .field_set {
     border: none;
 }
+
+/* Media for small screens for the logo at the top of pages */
 @media screen and (max-width: 780px) {
     #group-logo {
         max-width: 756px;
@@ -364,6 +392,8 @@ footer #copyright .brand {
         padding-right: 12px;
     }
 }
+
+/* Mobile screen general styling */
 @media screen and (max-width: 630px) {
     #logo-search > div > div.col.span_logo-search_1_of_2 {
         height: auto;
@@ -406,6 +436,8 @@ footer #copyright .brand {
         flex: 0 0 calc(100% - 24px);
     }
 }
+
+/* Banners at the top of categories */
 .banner-image {
     display: flex;
     justify-content: center;
