--- a/subpage-layout.css
+++ b/subpage-layout.css
@@ -210,9 +210,12 @@ p:empty {
     margin-left: -3px;
     cursor: pointer;
     font-size: 1rem;
-    font-weight: 100;
+    font-weight: 600;
     padding: 12px 24px;
-    text-transform: capitalize;
+    text-transform: lowercase;
+}
+#search-form form input.search::first-letter {
+    text-transform: uppercase;
 }
 #search-form form input.search:focus {
     box-sizing: border-box; 
